--- a/Pipfile
+++ b/Pipfile
@@ -9,10 +9,14 @@ pandas = "==1.0.3"
 seaborn = "==0.10.0"
 matplotlib = "==3.2.1"
 xlrd = "==1.2.0"
+kotlin-jupyter-kernel = "*"
+jupyterlab = "*"
+pyaxis = "*"
+openpyxl = "*"
 
 [dev-packages]
 pylint = "==2.4.4"
 setuptools = "==46.1.3"
 
 [requires]
-python_version = "3.7"
+python_version = "3"
